--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -24,6 +24,10 @@ SSJS is an XX-century-version of JavaScript paired with proprietary libraries cr
 - [Engage with Countdown](./usecase/engage-with-countdown.mdx)
 - [Tailor with Data](./usecase/tailor-with-data.mdx)
 
+### SSJS Snippets
+
+- [MobileConnect Phone Change](./ssjs/ssjs-snippet-mobileconnect-phone-change.mdx)
+
 <a class="button button--outline button--lg button--primary col col--6 col--offset-3" href="https://mateuszdabrowski.pl/docs/ssjs/ssjs-if-and-switch">Read about SSJS</a>
 
 ## JavaScript
