--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -76,6 +76,7 @@ There are many things in Salesforce Marketing Cloud that aren't code but have a 
 
 - [Permissions](./config/sfmc-config-permissions.mdx)
 - [System Data Views](./config/sfmc-config-system-data-views.mdx)
+- [Features On Demand](./config/sfmc-config-features-on-demand.mdx)
 - [Behavioral Triggers](./config/sfmc-config-behavioral-triggers.mdx)
 
 <a class="button button--outline button--lg button--primary col col--6 col--offset-3" href="https://mateuszdabrowski.pl/docs/config/sfmc-config-system-data-views">Read about SFMC Config</a>
