Update of SFMC Features on demand article

--- a/docs/config/sfmc-config-features-on-demand.mdx
+++ b/docs/config/sfmc-config-features-on-demand.mdx
@@ -28,7 +28,11 @@ Feature Name | Description | Documentation | Type
 Sender Authentication Package | SAP is a collection of products including Private Domain with link and image wrapping (unique for SAP), Dedicated IP, and Reply Mail Management. Must-have. | [SAP](https://help.salesforce.com/articleView?id=sf.mc_es_sap.htm&type=5) | Paid
 Additional Dedicated IP | You can purchase additional dedicated IPs to manage bigger volumes or split communication types. | [Dedicated IP](https://help.salesforce.com/articleView?id=sf.mc_es_dedicated_ip.htm&type=5) | Paid
 Additional Private Domain | You can purchase additional private domains to differentiate various types of your communication. Does not cover link and image branding. | [Private Domains](https://help.salesforce.com/articleView?id=000318538&type=1&mode=1) | Paid
-TODO: Default and custom way of managing multiple IPs + deliverability free suites
+Reputation Audit Test | Ad hoc request that allows you to receive information about current state of the blacklists, authentication, DNS and content reviews (spam assessment) for your dedicated IPs. | [Reputation Audit](https://docs.google.com/presentation/d/1TGDkSRWC-fB0vU7UjuP_18mgty6G_JHrDc2Anbmvi8Q/edit#slide=id.g863e745c9f_0_3842) | Free
+Reputation Audit Account | Allows you to receive a dedicated account to Reputation Audit tool so that you can check the state of your dedicated IPs without creating recurring Reputation Audit Test requests. | [Reputation Audit](https://docs.google.com/presentation/d/1TGDkSRWC-fB0vU7UjuP_18mgty6G_JHrDc2Anbmvi8Q/edit#slide=id.g863e745c9f_0_3842) | Free
+Bounce Detective | Sends email alerts when recent send has an elevated bounce rate at any domain with 25+ recipeints. Provides per-domain bounce0focused Bounce analysis. | [Bounce Detective](https://docs.google.com/document/d/1xhCuWTleC1u3TJvzREJbrxRGKYmVkx-TiPMcnTqgabE) | Free
+Sender Rating | Provides breakdown of current deliverability-focused sending scores, with trends, in a visually digestible format. | [SenderRating](https://docs.google.com/presentation/d/1YcrcGAp7mDGR5NpFESM6D1UUre6VwQ1redLpa6OjagE/edit) | Free
+Dedicated IP Custom Configuration | By default, if you have multiple dedicated IPs, your communication will use all of them by splitting the volume into 5000 emails batches and rotating the available IPs to push those. You can also assign specific IP to a specific Delivery Profile. However, with help of Support, you can create mixed solutions like pools of few IPs per each delivery profile. This might be crucial for huge senders. | [Dedicated IP Pooling](https://help.salesforce.com/articleView?id=000339124&type=1&mode=1) | Free
 
 ## Email Studio Features
 
@@ -36,7 +40,7 @@ Feature Name | Description | Documentation | Type
 -- | -- | -- | --
 CAN-SPAM Compliance Check | Marketing Cloud by default requires you to be compliant with US CAN-SPAM regulation by enforcing Commercial / Transactional split of messages and requiring specific data to be available in the email footer. If you are sending to non-US recipients, you can ask to switch off that requirement | [CAN-SPAM Compliance](https://help.salesforce.com/articleView?id=sf.mc_es_can_spam_requirements.htm&type=5) | Free
 Email Send Log | Allows you to log send-time data about your emails. Requires two features: Send Log Data Extension Template and Business Rule on the backend of SFMC to populate Data Extension based on this template. If your Send Log doesn't work, you probably miss the Business Rule. Ask for both. | [Send Logging in Email Studio](https://help.salesforce.com/articleView?id=sf.mc_es_send_logging.htm&type=5) | Free
-Auto-Suppression List | Allows you to suppress Contacts from receiving any Emails from the whole instance or from specific classification and Business Unit. No need to attach to each send as with standard Supression Lists. | [Auto-Suppression Lists](https://help.salesforce.com/articleView?id=sf.mc_es_auto_suppresion_lists.htm&type=5) |
+Auto-Suppression List | Allows you to suppress Contacts from receiving any Emails from the whole instance or from specific classification and Business Unit. No need to attach to each send as with standard Supression Lists. | [Auto-Suppression Lists](https://help.salesforce.com/articleView?id=sf.mc_es_auto_suppresion_lists.htm&type=5) | Free
 Exclusion Scripts | Allows you to define custom exclusion logic evaluated at send time using AMPScript. If possible, use segmentation, suppression and auto-suppression lists due to performance reasons, but in some cases Exclusion Script might be the only way. There is also matching feature for Journey Builder Emails. Ask for both. | [Email Studio Exclusion Scripts](https://help.salesforce.com/articleView?id=000339899&type=1&mode=1) | Free
 Custom List Detective | Allows you to block sending and subscribing all contacts with specified Email Address username (for exmaple `admin@`) or domain (for example `@competitor.com`) | [Custom List Detective](https://help.salesforce.com/articleView?id=000316767&type=1&mode=1) | Free
 Custom List Detective Allowlist | On top of Custom List Detective you can also ask Support to add specific usernames or domains to Allowlist. Might be useful, as this setting will overwrite the standard List Detective. | [Custom List Detective](https://help.salesforce.com/articleView?id=000316767&type=1&mode=1) | Free
@@ -77,4 +81,4 @@ Feature Name | Description | Documentation | Type
 -- | -- | -- | --
 Custom Data Views | Allows you to request a creation of Custom Data View. Mindblowing option. | [Example Custom Data View](https://salesforce.stackexchange.com/a/293395/91679) | Paid
 SOAP Triggered Send Prioritization | Allows you to declare priority for your Triggered Sends created via API. | [Triggered Send Priority](https://developer.salesforce.com/docs/atlas.en-us.noversion.mc-apis.meta/mc-apis/creating_a_triggered_send_using_the_async_api.htm) | Free
-SOAP Disable Datetime Normalization | By default dates coming to Marketing Cloud via SOAP API will be normalized. You can ask to disable it. | [Datetime Normalization](https://developer.salesforce.com/docs/atlas.en-us.noversion.mc-apis.meta/mc-apis/incoming_date_normalization.htm)
+SOAP Disable Datetime Normalization | By default dates coming to Marketing Cloud via SOAP API will be normalized. You can ask to disable it. | [Datetime Normalization](https://developer.salesforce.com/docs/atlas.en-us.noversion.mc-apis.meta/mc-apis/incoming_date_normalization.htm) | Free
