--- a/docs/config/sfmc-config-features-on-demand.mdx
+++ b/docs/config/sfmc-config-features-on-demand.mdx
@@ -2,37 +2,60 @@
 id: sfmc-config-features-on-demand
 title: SFMC Features On Demand
 sidebar_label: Features On Demand
-description: Work in progress.
+description: Discover the Salesforce Marketing Cloud Features On Demand and unlock platform potential.
 ---
 
 import { LeadText } from '../../src/components/LeadText.js';
 
-<LeadText content='Work in progress.' />
+<LeadText content="Discover the Salesforce Marketing Cloud's Features On Demand and unlock platform potential." />
 
-## What are Marketing Cloud Features On Demand?
-TODO
+## What are Marketing Cloud's Features On Demand?
+
+Salesforce Marketing Cloud is full of features straight out of the box. You can spend hours going through various panels and menus, discovering more options to make the instance your own and align it to the business needs.
+
+There is, however, a group of features that you won't be able to find. Salesforce hid them until you ask the Support to unlock them. SFMC Features On Demand.
+
+Why are they not available by default? There are various reasons:
+
+1. Some require irreversible changes, so Salesforce wants to be sure you know what you want.
+2. Some are putting a strain on the backend, so it is better to keep them off by default and enable only when a client needs them.
+3. Some have an additional cost and require a purchase before enabling.
+4. Some are dependent on specific modules, so there is no need to have them by default.
+5. Some will probably be added as a standard in the future (just as it has been done with previously on-demand Profile Attributes, Script Activity and Shared Folders for Content Builder).
+6. Some are no longer provided even when you ask (sweet, sweet Code Activity for Journey Builder...)
+
+I always wanted to have a full list of those features but could never find it. So here it is.
+
+:::note You Should Know
+
+This document is a living thing. Salesforce adds, deleted and changes the Features On Demand with new Marketing Cloud releases. I try to keep it up-to-date, but your help with this task will be appreciated.
+
+If you found anything below no longer correct or know yet another hidden SFMC feature - please [let me know](mailto:featuresOnDemand@mateuszdabrowski.pl?subject=Features-On-Demand-Update).
+
+:::
 
 ## Marketing Cloud Settings Features
 
 Feature Name | Description | Documentation | Type
 -- | -- | -- | --
 Basic Audit Trail | Captures information about SFMC access and security changes. | [Audit Trail](https://help.salesforce.com/articleView?id=sf.mc_overview_audit_trail.htm&type=5) | Free
-Advanced Audit Trail | Captures Basic Audit Trail Events and key events around Emails, MobileConnect, Mobile Push, Cloud Pages, Automations, Journeys and Google Analytics Integration. | [Audit Trail](https://help.salesforce.com/articleView?id=sf.mc_overview_audit_trail.htm&type=5) | Paid
+Advanced Audit Trail | Captures Basic Audit Trail Events and critical events around Emails, MobileConnect, Mobile Push, Cloud Pages, Automations, Journeys and Google Analytics Integration. | [Audit Trail](https://help.salesforce.com/articleView?id=sf.mc_overview_audit_trail.htm&type=5) | Paid
+Smart Alerts for Marketing Cloud | Enables automatic notification for Marketing Cloud problems like slow Email Send speed, Journeys starting without contacts, Automation issues, etc. | [Proactive Services for Marketing Cloud](https://help.salesforce.com/articleView?id=000313872&type=1&mode=1) | Paid
 Multi-Org Account | Allows you to connect different Sales/Service Cloud Orgs for each Marketing Cloud Business Unit. It is not reversible. | [Multi-Org Account](https://help.salesforce.com/articleView?id=sf.mc_co_upgrade_to_multi-org.htm&type=5) | Free
-Restore Encryption at Rest Key | If you use Bring Your Own Key for Encryption at Rest and revoked that key, this allows you to restore the key and retain the data if you act fast | [Restore SFMC Encryption Key](https://help.salesforce.com/articleView?id=sf.mc_overview_restore_byok.htm&type=5) | ?
+Restore Encryption at Rest Key | If you revoked (Bring Your Own) Key for Encryption at Rest, this allows you to restore the key and retain the data if you act fast | [Restore SFMC Encryption Key](https://help.salesforce.com/articleView?id=sf.mc_overview_restore_byok.htm&type=5) | ?
 
 ## Deliverability Features
 
 Feature Name | Description | Documentation | Type
 -- | -- | -- | --
 Sender Authentication Package | SAP is a collection of products including Private Domain with link and image wrapping (unique for SAP), Dedicated IP, and Reply Mail Management. Must-have. | [SAP](https://help.salesforce.com/articleView?id=sf.mc_es_sap.htm&type=5) | Paid
-Additional Dedicated IP | You can purchase additional dedicated IPs to manage bigger volumes or split communication types. | [Dedicated IP](https://help.salesforce.com/articleView?id=sf.mc_es_dedicated_ip.htm&type=5) | Paid
-Additional Private Domain | You can purchase additional private domains to differentiate various types of your communication. Does not cover link and image branding. | [Private Domains](https://help.salesforce.com/articleView?id=000318538&type=1&mode=1) | Paid
-Reputation Audit Test | Ad hoc request that allows you to receive information about current state of the blacklists, authentication, DNS and content reviews (spam assessment) for your dedicated IPs. | [Reputation Audit](https://docs.google.com/presentation/d/1TGDkSRWC-fB0vU7UjuP_18mgty6G_JHrDc2Anbmvi8Q/edit#slide=id.g863e745c9f_0_3842) | Free
+Additional Dedicated IP | You can purchase additional dedicated IPs to manage more significant volumes or split communication types. | [Dedicated IP](https://help.salesforce.com/articleView?id=sf.mc_es_dedicated_ip.htm&type=5) | Paid
+Additional Private Domain | You can purchase additional private domains to differentiate various communication types. This feature does not cover link and image branding. | [Private Domains](https://help.salesforce.com/articleView?id=000318538&type=1&mode=1) | Paid
+Reputation Audit Test | Ad hoc request allows you to receive information about the current state of the blacklists, authentication, DNS and content reviews (spam assessment) for your dedicated IPs. | [Reputation Audit](https://docs.google.com/presentation/d/1TGDkSRWC-fB0vU7UjuP_18mgty6G_JHrDc2Anbmvi8Q/edit#slide=id.g863e745c9f_0_3842) | Free
 Reputation Audit Account | Allows you to receive a dedicated account to Reputation Audit tool so that you can check the state of your dedicated IPs without creating recurring Reputation Audit Test requests. | [Reputation Audit](https://docs.google.com/presentation/d/1TGDkSRWC-fB0vU7UjuP_18mgty6G_JHrDc2Anbmvi8Q/edit#slide=id.g863e745c9f_0_3842) | Free
-Bounce Detective | Sends email alerts when recent send has an elevated bounce rate at any domain with 25+ recipeints. Provides per-domain bounce0focused Bounce analysis. | [Bounce Detective](https://docs.google.com/document/d/1xhCuWTleC1u3TJvzREJbrxRGKYmVkx-TiPMcnTqgabE) | Free
-Sender Rating | Provides breakdown of current deliverability-focused sending scores, with trends, in a visually digestible format. | [SenderRating](https://docs.google.com/presentation/d/1YcrcGAp7mDGR5NpFESM6D1UUre6VwQ1redLpa6OjagE/edit) | Free
-Dedicated IP Custom Configuration | By default, if you have multiple dedicated IPs, your communication will use all of them by splitting the volume into 5000 emails batches and rotating the available IPs to push those. You can also assign specific IP to a specific Delivery Profile. However, with help of Support, you can create mixed solutions like pools of few IPs per each delivery profile. This might be crucial for huge senders. | [Dedicated IP Pooling](https://help.salesforce.com/articleView?id=000339124&type=1&mode=1) | Free
+Bounce Detective | Sends email alerts when recent send has an elevated bounce rate at any domain with 25+ recipients and provides per-domain bounce-focused analysis. | N/A | Free
+Sender Rating | Provides a breakdown of current deliverability-focused sending scores, with trends, in a visually digestible format. | N/A | Free
+Dedicated IP Custom Configuration | By default, if you have multiple dedicated IPs, your communication will use all of them by splitting the volume into 5000 emails batches and rotating the available IPs to push those. You can also assign a specific IP to a particular Delivery Profile. However, with the help of Support, you can create hybrid solutions like pools of few IPs per each delivery profile. It might be crucial for massive senders. | N/A | Free
 
 ## Email Studio Features
 
@@ -40,9 +63,9 @@ Feature Name | Description | Documentation | Type
 -- | -- | -- | --
 CAN-SPAM Compliance Check | Marketing Cloud by default requires you to be compliant with US CAN-SPAM regulation by enforcing Commercial / Transactional split of messages and requiring specific data to be available in the email footer. If you are sending to non-US recipients, you can ask to switch off that requirement | [CAN-SPAM Compliance](https://help.salesforce.com/articleView?id=sf.mc_es_can_spam_requirements.htm&type=5) | Free
 Email Send Log | Allows you to log send-time data about your emails. Requires two features: Send Log Data Extension Template and Business Rule on the backend of SFMC to populate Data Extension based on this template. If your Send Log doesn't work, you probably miss the Business Rule. Ask for both. | [Send Logging in Email Studio](https://help.salesforce.com/articleView?id=sf.mc_es_send_logging.htm&type=5) | Free
-Auto-Suppression List | Allows you to suppress Contacts from receiving any Emails from the whole instance or from specific classification and Business Unit. No need to attach to each send as with standard Supression Lists. | [Auto-Suppression Lists](https://help.salesforce.com/articleView?id=sf.mc_es_auto_suppresion_lists.htm&type=5) | Free
-Exclusion Scripts | Allows you to define custom exclusion logic evaluated at send time using AMPScript. If possible, use segmentation, suppression and auto-suppression lists due to performance reasons, but in some cases Exclusion Script might be the only way. There is also matching feature for Journey Builder Emails. Ask for both. | [Email Studio Exclusion Scripts](https://help.salesforce.com/articleView?id=000339899&type=1&mode=1) | Free
-Custom List Detective | Allows you to block sending and subscribing all contacts with specified Email Address username (for exmaple `admin@`) or domain (for example `@competitor.com`) | [Custom List Detective](https://help.salesforce.com/articleView?id=000316767&type=1&mode=1) | Free
+Auto-Suppression List | Allows you to suppress Contacts from receiving any Emails from the whole instance or specific classification and Business Unit. No need to attach to each send as with standard Suppression Lists. | [Auto-Suppression Lists](https://help.salesforce.com/articleView?id=sf.mc_es_auto_suppresion_lists.htm&type=5) | Free
+Exclusion Scripts | Allows you to define custom exclusion logic evaluated at send time using AMPScript. If possible, use segmentation, suppression and auto-suppression lists due to performance reasons, but in some cases, Exclusion Script might be the only way. There is also a matching feature for Journey Builder Emails. Ask for both. | [Email Studio Exclusion Scripts](https://help.salesforce.com/articleView?id=000339899&type=1&mode=1) | Free
+Custom List Detective | Allows you to block sending and subscribing all contacts with specified Email Address username (for example `admin@`) or domain (for example `@competitor.com`) | [Custom List Detective](https://help.salesforce.com/articleView?id=000316767&type=1&mode=1) | Free
 Custom List Detective Allowlist | On top of Custom List Detective you can also ask Support to add specific usernames or domains to Allowlist. Might be useful, as this setting will overwrite the standard List Detective. | [Custom List Detective](https://help.salesforce.com/articleView?id=000316767&type=1&mode=1) | Free
 Email Attachments | Allows you to send emails with attachments. | [Email Attachments](https://help.salesforce.com/articleView?id=sf.mc_es_email_attachments.htm&type=5) | Paid
 Preserve Reply Attachments | Forwards attachments added to the reply email via RMM's auto-forwarding. | [Reply Mail Management](https://help.salesforce.com/articleView?id=sf.mc_es_reply_mail_management.htm&type=5) | Free
@@ -52,7 +75,7 @@ Subscriber-Specific From Name & Address | Allows you to personalize the From Nam
 
 Feature Name | Description | Documentation | Type
 -- | -- | -- | --
-SMS Send Log | Allows you to log send-time data about your sms. Requires two features: SMS Send Log Data Extension Template and Business Rule on the backend of SFMC to populate Data Extension based on this template. If your Send Log doesn't work, you probably miss the Business Rule. Ask for both. | [SMS Send Logging Data Extension](https://help.salesforce.com/articleView?id=sf.mc_es_create_sms_sendlogging_de.htm&type=5) | Free
+SMS Send Log | Allows you to log send-time data about your SMS. Requires two features: SMS Send Log Data Extension Template and Business Rule on the backend of SFMC to populate Data Extension based on this template. If your Send Log doesn't work, you probably miss the Business Rule. Ask for both. | [SMS Send Logging Data Extension](https://help.salesforce.com/articleView?id=sf.mc_es_create_sms_sendlogging_de.htm&type=5) | Free
 Push Send Log | Allows you to log send-time data about your push notifications. Requires two features: Push Send Log Data Extension Template and Business Rule on the backend of SFMC to populate Data Extension based on this template. If your Send Log doesn't work, you probably miss the Business Rule. Ask for both. | [Push Notification Send Logging Data Extension](https://help.salesforce.com/articleView?id=sf.mc_es_create_push_sendlog.htm&type=5) | Free
 
 ## Analytics Builder
@@ -65,20 +88,20 @@ Send Time Attributes in a Discover Report | Allows you to add up to 15 Send Time
 
 Feature Name | Description | Documentation | Type
 -- | -- | -- | --
-Exclusion Scripts for Email Activity | Allows you to define custom exclusion logic evaluated at send time using AMPScript. If possible, use segmentation, suppression and auto-suppression lists due to performance reasons, but in some cases Exclusion Script might be the only way. There is also matching feature for Email Studio. Ask for both. | [Journey Builder Exclusion Scripts](https://help.salesforce.com/articleView?id=000320456&type=1&mode=1) | Free
+Exclusion Scripts for Email Activity | Allows you to define custom exclusion logic evaluated at send time using AMPScript. If possible, use segmentation, suppression and auto-suppression lists due to performance reasons, but in some cases, Exclusion Script might be the only way. There is also a matching feature for Email Studio. Ask for both. | [Journey Builder Exclusion Scripts](https://help.salesforce.com/articleView?id=000320456&type=1&mode=1) | Free
 
 ## Automation Studio Features
 
 Feature Name | Description | Documentation | Type
 -- | -- | -- | --
 Data Extract Types | Adds various Data Extract Activity options in Automation Studio. Ask for enabling every available one, as not all are mentioned in the official documentation. | [Data Extract Activity](https://help.salesforce.com/articleView?id=sf.mc_as_extract_types_reference.htm&type=5) | Free
-Salesforce Objects & Reports Import | If you are using Marketing Cloud Connect, you can ask support to enable additional Import Activity Type to pull Objects and Reports to Salesforce Data Extensions folder. | [Import Activity](https://help.salesforce.com/articleView?id=sf.mc_es_create_an_import_activity.htm&type=5) | Free
-Additional Automation Activities | You can ask Support to enable few additional Automation Activities focused on Journey Builder and Salesforce integration. | [On Demand Activities](https://help.salesforce.com/articleView?id=sf.mc_as_automation_studio_activities_reference.htm&type=5) | ?
+Salesforce Objects & Reports Import | If you are using Marketing Cloud Connect, you can ask Support to enable additional Import Activity Type to pull Objects and Reports to Salesforce Data Extensions folder. | [Import Activity](https://help.salesforce.com/articleView?id=sf.mc_es_create_an_import_activity.htm&type=5) | Free
+Additional Automation Activities | You can ask Support to enable a few additional Automation Activities focused on Journey Builder and Salesforce integration. | [On-Demand Activities](https://help.salesforce.com/articleView?id=sf.mc_as_automation_studio_activities_reference.htm&type=5) | ?
 
 ## Developer Features
 
 Feature Name | Description | Documentation | Type
 -- | -- | -- | --
-Custom Data Views | Allows you to request a creation of Custom Data View. Mindblowing option. | [Example Custom Data View](https://salesforce.stackexchange.com/a/293395/91679) | Paid
+Custom Data Views | Allows you to request the creation of Custom Data View. Mindblowing option. | [Example Custom Data View](https://salesforce.stackexchange.com/a/293395/91679) | Paid
 SOAP Triggered Send Prioritization | Allows you to declare priority for your Triggered Sends created via API. | [Triggered Send Priority](https://developer.salesforce.com/docs/atlas.en-us.noversion.mc-apis.meta/mc-apis/creating_a_triggered_send_using_the_async_api.htm) | Free
 SOAP Disable Datetime Normalization | By default dates coming to Marketing Cloud via SOAP API will be normalized. You can ask to disable it. | [Datetime Normalization](https://developer.salesforce.com/docs/atlas.en-us.noversion.mc-apis.meta/mc-apis/incoming_date_normalization.htm) | Free
