Finished Features On Demand article

--- a/docs/config/sfmc-config-features-on-demand.mdx
+++ b/docs/config/sfmc-config-features-on-demand.mdx
@@ -28,9 +28,9 @@ I always wanted to have a full list of those features but could never find it. S
 
 :::note You Should Know
 
-This document is a living thing. Salesforce adds, deleted and changes the Features On Demand with new Marketing Cloud releases. I try to keep it up-to-date, but your help with this task will be appreciated.
+This document is a living thing. Salesforce adds, deletes and updates the Features On Demand with Marketing Cloud releases. I try to keep it up-to-date, but your help with this task will be appreciated.
 
-If you found anything below no longer correct or know yet another hidden SFMC feature - please [let me know](mailto:featuresOnDemand@mateuszdabrowski.pl?subject=Features-On-Demand-Update).
+If you found anything below no longer correct or know yet another hidden SFMC feature - please [let me know](mailto:feedback@mateuszdabrowski.pl?subject=Feedback%20on%20Features%20On%20Demand%20article).
 
 :::
 
@@ -78,7 +78,7 @@ Feature Name | Description | Documentation | Type
 SMS Send Log | Allows you to log send-time data about your SMS. Requires two features: SMS Send Log Data Extension Template and Business Rule on the backend of SFMC to populate Data Extension based on this template. If your Send Log doesn't work, you probably miss the Business Rule. Ask for both. | [SMS Send Logging Data Extension](https://help.salesforce.com/articleView?id=sf.mc_es_create_sms_sendlogging_de.htm&type=5) | Free
 Push Send Log | Allows you to log send-time data about your push notifications. Requires two features: Push Send Log Data Extension Template and Business Rule on the backend of SFMC to populate Data Extension based on this template. If your Send Log doesn't work, you probably miss the Business Rule. Ask for both. | [Push Notification Send Logging Data Extension](https://help.salesforce.com/articleView?id=sf.mc_es_create_push_sendlog.htm&type=5) | Free
 
-## Analytics Builder
+## Analytics Builder Features
 
 Feature Name | Description | Documentation | Type
 -- | -- | -- | --
